model orientation working :)